# FOMO_wallet

./: .gitignore  README.md  docker-compose.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/backend/: cache.py  config.py  main.py  models.py  native_wrapped.py  utils.py  web3_provider.py
backend/src/backend/external_services/one_inch_devportal/: balances.py  full_info.py  spot_prices.py  tokens.py
backend/src/backend/external_services/one_inch_oracles/: spot_price.py
backend/src/backend/protocols/: base.py
backend/src/backend/protocols/aave/: __init__.py  cached_data.py  contracts.py  node_data.py
backend/src/backend/protocols/gearbox/: __init__.py  cached_data.py  contracts.py  node_data.py
backend/src/backend/protocols/lido/: __init__.py  cached_data.py  node_data.py
backend/src/backend/protocols/spark/: __init__.py  cached_data.py  contracts.py  node_data.py
frontend/: .env  Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/assets/: main.css
frontend/src/components/: MainComponent.vue
frontend/src/helpers/: chainsLogo.json  index.js  prepareResultsMoralis.js
nginx/: nginx.conf
scripts/: deploy
