[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
aiohttp = "^3.9.0"
pydantic-settings = "^2.1.0"
1inch-py = "^2.0.3"
redis = "^5.0.1"
aiocache = "^0.12.2"
gunicorn = "^21.2.0"
aiohttp-retry = "^2.8.3"
shelved-cache = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
